--- a/apps/traefik/values/prod.yaml
+++ b/apps/traefik/values/prod.yaml
@@ -4,9 +4,9 @@ additionalArguments:
   - --entryPoints.redis.address=:6379/tcp
   - --entryPoints.postgres.address=:5432/tcp
 logs:
-  level: DEBUG
+  level: INFO
   access:
-    enabled: true
+    enabled: false
     format: json
     fields:
       general:
