--- a/apps/tenant-authentik/manifests/secrets/secret-minio-tenant-authentik-user-credentials.yaml
+++ b/apps/tenant-authentik/manifests/secrets/secret-minio-tenant-authentik-user-credentials.yaml
@@ -5,7 +5,7 @@ metadata:
   name: infisical-secret-tenant-authentik-minio-users
   namespace: authentik
 spec:
-  hostAPI: "${INFISICAL_HOST_API}"
+  hostAPI: "${INFISICAL_PROD_HOST_API}"
   authentication:
     universalAuth:
       credentialsRef:
