--- a/apps/argocd/manifests/base/plugins/cmp-kustomize-envsubst.yaml
+++ b/apps/argocd/manifests/base/plugins/cmp-kustomize-envsubst.yaml
@@ -4,8 +4,6 @@ kind: ConfigMap
 metadata:
   name: cmp-kustomize-envsubst
   namespace: argocd
-  labels:
-    argocd.argoproj.io/config-management-plugin: kustomize-envsubst-v1
 data:
   plugin.yaml: |
     apiVersion: argoproj.io/v1alpha1
@@ -13,7 +11,6 @@ data:
     metadata:
       name: kustomize-envsubst
     spec:
-      version: v1
       generate:
-        command: ["sh","-c"]
-        args: ["kustomize build {{ .path }} | envsubst"]
+        command: ["sh", "-c"]
+        args: ["kustomize build . | envsubst"]
