--- a/apps/tenant-authentik/kustomization.yaml
+++ b/apps/tenant-authentik/kustomization.yaml
@@ -12,7 +12,7 @@ helmCharts:
     valuesFile: values/prod.yaml
 
 resources:
-  - manifests/secrets/kustomization.yaml
-  - manifests/ingress/kustomization.yaml
-  - manifests/storage/kustomization.yaml
-  - manifests/certificates/kustomization.yaml
+  - manifests/secrets
+  - manifests/ingress
+  - manifests/storage
+  - manifests/certificates
