--- a/apps/tenant-authentik/application.yaml
+++ b/apps/tenant-authentik/application.yaml
@@ -12,17 +12,17 @@ spec:
     path: apps/tenant-authentik
     plugin:
       name: kustomize-envsubst
-      env:
-        - name: ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN
-          value: $ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN
-        - name: ARGOCD_ENV_S3_AUTHENTIK_PROD_API_DOMAIN
-          value: $ARGOCD_ENV_S3_AUTHENTIK_PROD_API_DOMAIN
-        - name: ARGOCD_ENV_INFISICAL_PROD_HOST_API
-          value: $ARGOCD_ENV_INFISICAL_PROD_HOST_API
-        - name: ARGOCD_ENV_INFISICAL_PROJECT_SLUG
-          value: $ARGOCD_ENV_INFISICAL_PROJECT_SLUG
-        - name: ARGOCD_ENV_INFISICAL_ENV_SLUG
-          value: $ARGOCD_ENV_INFISICAL_ENV_SLUG
+      # env:
+      #   - name: S3_AUTHENTIK_PROD_DOMAIN
+      #     value: $ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN
+      #   - name: S3_AUTHENTIK_PROD_API_DOMAIN
+      #     value: $ARGOCD_ENV_S3_AUTHENTIK_PROD_API_DOMAIN
+      #   - name: INFISICAL_PROD_HOST_API
+      #     value: $ARGOCD_ENV_INFISICAL_PROD_HOST_API
+      #   - name: INFISICAL_PROJECT_SLUG
+      #     value: $ARGOCD_ENV_INFISICAL_PROJECT_SLUG
+      #   - name: INFISICAL_ENV_SLUG
+      #     value: $ARGOCD_ENV_INFISICAL_ENV_SLUG
   destination:
     server: https://kubernetes.default.svc
     namespace: authentik
