--- a/apps/tenant-authentik/manifests/secrets/secret-minio-tenant-authentik-root-credentials.yaml
+++ b/apps/tenant-authentik/manifests/secrets/secret-minio-tenant-authentik-root-credentials.yaml
@@ -5,15 +5,15 @@ metadata:
   name: infisical-secret-tenant-authentik-minio-env-configuration
   namespace: authentik
 spec:
-  hostAPI: "${INFISICAL_PROD_HOST_API}"
+  hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
   authentication:
     universalAuth:
       credentialsRef:
         secretName: universal-auth-credentials
         secretNamespace: infisical
       secretsScope:
-        projectSlug: "${INFISICAL_PROJECT_SLUG}"
-        envSlug: "${INFISICAL_ENV_SLUG}"
+        projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
+        envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
         secretsPath: "/authentik/env"
         recursive: true
   managedKubeSecretReferences:
