updated custom plugin for kustomize + envsbsts

--- a/apps/argocd/manifests/base/plugins/cmp-kustomize-envsubst.yaml
+++ b/apps/argocd/manifests/base/plugins/cmp-kustomize-envsubst.yaml
@@ -13,4 +13,5 @@ data:
     spec:
       generate:
         command: ["sh", "-c"]
-        args: ["kustomize build . | envsubst"]
+        args:
+          - "kustomize build --enable-helm --load-restrictor LoadRestrictionsNone . | envsubst"
