--- a/apps/traefik/kustomization.yaml
+++ b/apps/traefik/kustomization.yaml
@@ -1,19 +1,18 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: authentik
+namespace: traefik
 
 helmCharts:
-  - name: tenant
-    repo: https://operator.min.io
-    version: 7.1.1
-    releaseName: tenant-authentik
-    namespace: authentik
+  - name: traefik
+    repo: https://traefik.github.io/charts
+    version: 35.2.0
+    releaseName: traefik
+    namespace: traefik
     valuesFile: values/prod.yaml
 
 resources:
-  - manifests/secrets/secret-minio-tenant-authentik-root-credentials.yaml
-  - manifests/secrets/secret-minio-tenant-authentik-user-credentials.yaml
   - manifests/ingress/prod.yaml
-  - manifests/storage/longhorn-minio-tenant-authentik.yaml
-  - manifests/certificates/tls-certificate-minio-tenant-authentik.yaml
+  - manifests/middleware/middleware-default-headers.yaml
+  - manifests/middleware/middleware-secret-traefik-dashboard-auth-credentials.yaml
+  - manifests/secrets/secret-traefik-dashboard-auth-credentials.yaml
