updated env to match argocd env prefix

--- a/apps/jenkins/manifests/ingress/live.yaml
+++ b/apps/jenkins/manifests/ingress/live.yaml
@@ -10,7 +10,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`${JENKINS_LIVE_DOMAIN}`)
+    - match: Host(`${ARGOCD_ENV_JENKINS_LIVE_DOMAIN}`)
       kind: Rule
       middlewares:
         - name: github-hooks-ips
