--- a/apps/jenkins/manifests/secrets/secret-jenkins-kube-config.yaml
+++ b/apps/jenkins/manifests/secrets/secret-jenkins-kube-config.yaml
@@ -5,15 +5,15 @@ metadata:
   name: infisical-secret-jenkins-kube-config
   namespace: jenkins
 spec:
-  hostAPI: ${INFISICAL_HOST_API}
+  hostAPI: ${ARGOCD_ENV_INFISICAL_PROD_HOST_API}
   authentication:
     universalAuth:
       credentialsRef:
         secretName: universal-auth-credentials
         secretNamespace: infisical
       secretsScope:
-        projectSlug: ${INFISICAL_PROJECT_SLUG}
-        envSlug: ${INFISICAL_ENV_SLUG}
+        projectSlug: ${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}
+        envSlug: ${ARGOCD_ENV_INFISICAL_ENV_SLUG}
         secretsPath: "/kubeconfig"
         recursive: true
   managedKubeSecretReferences:
