--- a/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
+++ b/apps/jenkins/manifests/ingress/middleware/middleware-github-hooks-ip-allowlist.yaml
@@ -8,7 +8,7 @@ spec:
   ipAllowList:
     sourceRange:
       # GitHub Meta API as of 4 May 2025 – refresh monthly!
-      - ${GITHUB_HOOKS_IP}
+      - ${ARGOCD_ENV_GITHUB_HOOKS_IP}
       - 192.30.252.0/22
       - 185.199.108.0/22
       - 140.82.112.0/20
