--- a/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
+++ b/apps/jenkins/manifests/secrets/secret-jenkins-admin-credentials.yaml
@@ -7,15 +7,15 @@ metadata:
   labels:
     cnpg.io/reload: "true"
 spec:
-  hostAPI: ${INFISICAL_HOST_API}
+  hostAPI: ${ARGOCD_ENV_INFISICAL_PROD_HOST_API}
   authentication:
     universalAuth:
       credentialsRef:
         secretName: universal-auth-credentials
         secretNamespace: infisical
       secretsScope:
-        projectSlug: ${INFISICAL_PROJECT_SLUG}
-        envSlug: ${INFISICAL_ENV_SLUG}
+        projectSlug: ${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}
+        envSlug: ${ARGOCD_ENV_INFISICAL_ENV_SLUG}
         secretsPath: "/jenkins"
         recursive: true
   managedKubeSecretReferences:
