--- a/apps/issuers/letsencrypt-issuer/manifests/secrets/secret-cloud-flare-api-token.yaml
+++ b/apps/issuers/letsencrypt-issuer/manifests/secrets/secret-cloud-flare-api-token.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: cert-manager
 type: Opaque
 stringData:
-  cloudflare-token: "${CLOUDFLARE_API_TOKEN}"
+  cloudflare-token: "${ARGOCD_ENV_CLOUDFLARE_API_TOKEN}"
