--- a/apps/cnpg-infisical/application.yaml
+++ b/apps/cnpg-infisical/application.yaml
@@ -15,5 +15,15 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: infisical
-  syncPolicy: {}
+  ignoreDifferences:
+    - group: ""
+      kind: Secret
+      name: infisical-pg-admin-credentials-secret
+      namespace: infisical
+      jsonPointers:
+        - /data/username
+        - /data/password
+  syncPolicy:
+    syncOptions:
+      - RespectIgnoreDifferences=true
   revisionHistoryLimit: 10
