updated cluster to use top level storage classes managed by longhorn application for argocd

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -13,3 +13,6 @@ helmCharts:
 
 resources:
   - manifests/ingress/ingress.yaml
+  - manifests/storage/longhorn-default-storage-class.yaml
+  - manifests/storage/longhorn-storage-class-replicas-1.yaml
+  - manifests/storage/longhorn-volume-snapshot-class.yaml
