--- a/apps/minio-operator/manifests/certificates/tls-certificate-sts.yaml
+++ b/apps/minio-operator/manifests/certificates/tls-certificate-sts.yaml
@@ -2,7 +2,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: sts-certmanager-cert
+  name: sts-tls-certificate
   namespace: minio-operator
 spec:
   secretName: sts-tls
