--- a/apps/infisical/manifests/secrets/infisical-secrets.yaml
+++ b/apps/infisical/manifests/secrets/infisical-secrets.yaml
@@ -6,6 +6,6 @@ metadata:
   namespace: infisical
 type: Opaque
 stringData:
-  ENCRYPTION_KEY: "${INFISICAL_ENCRYPTION_KEY}"
-  AUTH_SECRET: "${INFISICAL_AUTH_SECRET}"
-  SITE_URL: "${INFISICAL_DOMAIN}"
+  ENCRYPTION_KEY: "${ARGOCD_ENV_INFISICAL_ENCRYPTION_KEY}"
+  AUTH_SECRET: "${ARGOCD_ENV_INFISICAL_AUTH_SECRET}"
+  SITE_URL: "${ARGOCD_ENV_INFISICAL_DOMAIN}"
