updated jenkins kube config secret

--- a/apps/jenkins/manifests/secrets/secret-jenkins-kube-config.yaml
+++ b/apps/jenkins/manifests/secrets/secret-jenkins-kube-config.yaml
@@ -14,7 +14,7 @@ spec:
       secretsScope:
         projectSlug: ${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}
         envSlug: ${ARGOCD_ENV_INFISICAL_ENV_SLUG}
-        secretsPath: "/kubeconfig"
+        secretsPath: "/jenkins"
         recursive: true
   managedKubeSecretReferences:
     - secretName: jenkins-kube-config
