--- a/apps/argocd/manifests/base/secrets/secret-argocd-app-env.yaml
+++ b/apps/argocd/manifests/base/secrets/secret-argocd-app-env.yaml
@@ -37,8 +37,8 @@ spec:
           ARGOCD_ENV_INFISICAL_ENCRYPTION_KEY: "{{ .INFISICAL_ENCRYPTION_KEY.Value }}"
           ARGOCD_ENV_INFISICAL_AUTH_SECRET: "{{ .INFISICAL_AUTH_SECRET.Value }}"
           ARGOCD_ENV_AUTHENTIK_PROD_DOMAIN: "{{ .AUTHENTIK_APP.Value }}.{{ .DOMAIN.Value }}"
-          ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN: "{{ .S3_AUTHENTIK_CONSOLE.Value }}.{{ .DOMAIN.Value }}"
-          ARGOCD_ENV_S3_AUTHENTIK_PROD_API_DOMAIN: "{{ .S3_AUTHENTIK_API.Value }}.{{ .DOMAIN.Value }}"
+          ARGOCD_ENV_S3_PROD_DOMAIN: "{{ .S3_CONSOLE.Value }}.{{ .DOMAIN.Value }}"
+          ARGOCD_ENV_S3_PROD_API_DOMAIN: "{{ .S3_API.Value }}.{{ .DOMAIN.Value }}"
           ARGOCD_ENV_LONGHORN_PROD_DOMAIN: "{{ .LONGHORN_APP.Value }}.{{ .DOMAIN.Value }}"
           ARGOCD_ENV_TRAEFIK_PROD_DOMAIN: "{{ .TRAEFIK_APP.Value }}.{{ .DOMAIN.Value }}"
           ARGOCD_ENV_TRAEFIK_LOAD_BALANCER_IP: "{{ .TRAEFIK_LOAD_BALANCER_IP.Value }}"
