--- a/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-admin-console-user-credentials.yaml
+++ b/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-admin-console-user-credentials.yaml
@@ -2,8 +2,8 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-tenant-authentik-minio-users
-  namespace: authentik
+  name: infisical-secret-tenant-s3-minio-admin-console-user-credentials
+  namespace: minio
 spec:
   hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
   authentication:
@@ -14,11 +14,11 @@ spec:
       secretsScope:
         projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
         envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
-        secretsPath: "/authentik/minio"
+        secretsPath: "/minio"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: tenant-authentik-minio-users
-      secretNamespace: authentik
+    - secretName: tenant-s3-minio-admin-console-user-credentials
+      secretNamespace: minio
       secretType: Opaque
       creationPolicy: Owner
       template:
