--- a/apps/tenant-s3/manifests/ingress/prod.yaml
+++ b/apps/tenant-s3/manifests/ingress/prod.yaml
@@ -2,23 +2,23 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: authentik-minio-ingress
-  namespace: authentik
+  name: minio-ingress
+  namespace: minio
   annotations:
     kubernetes.io/ingress.class: traefik-external
 spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`${ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN}`)
+    - match: Host(`${ARGOCD_ENV_S3_PROD_DOMAIN}`)
       kind: Rule
       middlewares:
         - name: default-headers
           namespace: default
       services:
-        - name: tenant-authentik-console
+        - name: tenant-s3-console
           port: 9443
-    - match: Host(`${ARGOCD_ENV_S3_AUTHENTIK_PROD_DOMAIN}`)
+    - match: Host(`${ARGOCD_ENV_S3_PROD_API_DOMAIN}`)
       kind: Rule
       middlewares:
         - name: default-headers
