--- a/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-root-credentials.yaml
+++ b/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-root-credentials.yaml
@@ -2,8 +2,8 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-tenant-authentik-minio-env-configuration
-  namespace: authentik
+  name: infisical-secret-tenant-s3-minio-env-configuration
+  namespace: minio
 spec:
   hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
   authentication:
@@ -14,16 +14,16 @@ spec:
       secretsScope:
         projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
         envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
-        secretsPath: "/authentik/env"
+        secretsPath: "/minio"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: tenant-authentik-minio-env-configuration
-      secretNamespace: authentik
+    - secretName: tenant-s3-minio-env-configuration
+      secretNamespace: minio
       secretType: Opaque
       creationPolicy: Owner
       template:
         includeAllSecrets: false
         data:
           config.env: |
-            export MINIO_ROOT_USER={{ .AUTHENTIK_STORAGE__MEDIA__S3__ACCESS_KEY.Value }}
-            export MINIO_ROOT_PASSWORD={{ .AUTHENTIK_STORAGE__MEDIA__S3__SECRET_KEY.Value }}
+            export MINIO_ROOT_USER={{ .MINIO_ROOT_USER.Value }}
+            export MINIO_ROOT_PASSWORD={{ .MINIO_ROOT_PASSWORD.Value }}
