updated secret name for admin console user

--- a/apps/tenant-s3/values/prod.yaml
+++ b/apps/tenant-s3/values/prod.yaml
@@ -65,4 +65,4 @@ tenant:
     labels: {}
   prometheusOperator: false
   users:
-    - name: tenant-s3-minio-users
+    - name: tenant-s3-minio-admin-console-user-credentials
