--- a/apps/tenant-s3/values/prod.yaml
+++ b/apps/tenant-s3/values/prod.yaml
@@ -66,4 +66,4 @@ tenant:
     labels: {}
   prometheusOperator: false
   users:
-    - name: tenant-s3-minio-users
+    - name: tenant-s3-minio-admin-console-user-credentials
