removed old tls secret and replaced with new s3 tenant secret

--- a/apps/minio-operator/manifests/secrets/secret-minio-operator-ca-tls-tenant-s3.yaml
+++ b/apps/minio-operator/manifests/secrets/secret-minio-operator-ca-tls-tenant-s3.yaml
@@ -2,7 +2,7 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-operator-ca-tls-tenant-authentik
+  name: infisical-secret-operator-ca-tls-tenant-s3
   namespace: minio-operator
 spec:
   hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
@@ -17,9 +17,9 @@ spec:
         secretsPath: "/certificates/internal"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: operator-ca-tls-tenant-authentik
+    - secretName: operator-ca-tls-tenant-s3
       secretNamespace: minio-operator
-      secretType: Opaque
+      secretType: kubernetes.io/tls
       creationPolicy: Owner
       template:
         includeAllSecrets: true
