feature: added local data storage class for faster storage operation, cnpg, minio, etc.

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -15,4 +15,5 @@ resources:
   - manifests/ingress/ingress.yaml
   - manifests/storage/longhorn-default-storage-class.yaml
   - manifests/storage/longhorn-storage-class-replicas-1.yaml
+  - manifests/storage/longhorn-storage-class-local.yaml
   - manifests/storage/longhorn-volume-snapshot-class.yaml
