(feat): added cluster wide s3 minio storage solution (#13)
* refactored tenant authentik to s3 for cluster wide s3 resource

* updated references from authentik to new s3 tenant and namespace of minio

* updated secret name for admin console user

* updated default parralell mod strat to orderedready

* accident users secret change with previous commit

* removed podmanagement to allow parralel upgrade

* updated storage class to use local storage

* added initial application for s3

--- a/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-admin-console-user-credentials.yaml
+++ b/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-admin-console-user-credentials.yaml
@@ -2,8 +2,8 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-tenant-authentik-minio-env-configuration
-  namespace: authentik
+  name: infisical-secret-tenant-s3-minio-admin-console-user-credentials
+  namespace: minio
 spec:
   hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
   authentication:
@@ -14,16 +14,17 @@ spec:
       secretsScope:
         projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
         envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
-        secretsPath: "/authentik/env"
+        secretsPath: "/minio"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: tenant-authentik-minio-env-configuration
-      secretNamespace: authentik
+    - secretName: tenant-s3-minio-admin-console-user-credentials
+      secretNamespace: minio
       secretType: Opaque
       creationPolicy: Owner
       template:
         includeAllSecrets: false
         data:
-          config.env: |
-            export MINIO_ROOT_USER={{ .AUTHENTIK_STORAGE__MEDIA__S3__ACCESS_KEY.Value }}
-            export MINIO_ROOT_PASSWORD={{ .AUTHENTIK_STORAGE__MEDIA__S3__SECRET_KEY.Value }}
+          CONSOLE_ACCESS_KEY: "{{ .CONSOLE_ACCESS_KEY.Value }}"
+          CONSOLE_SECRET_KEY: "{{ .CONSOLE_SECRET_KEY.Value }}"
+          CONSOLE_PBKDF_SALT: "{{ .CONSOLE_PBKDF_SALT.Value }}"
+          CONSOLE_PBKDF_PASSPHRASE: "{{ .CONSOLE_PBKDF_PASSPHRASE.Value }}"
