--- a/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-root-credentials.yaml
+++ b/apps/tenant-s3/manifests/secrets/secret-minio-tenant-s3-root-credentials.yaml
@@ -2,8 +2,8 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-secret-tenant-authentik-minio-users
-  namespace: authentik
+  name: infisical-secret-tenant-s3-minio-env-configuration
+  namespace: minio
 spec:
   hostAPI: "${ARGOCD_ENV_INFISICAL_PROD_HOST_API}"
   authentication:
@@ -14,17 +14,16 @@ spec:
       secretsScope:
         projectSlug: "${ARGOCD_ENV_INFISICAL_PROJECT_SLUG}"
         envSlug: "${ARGOCD_ENV_INFISICAL_ENV_SLUG}"
-        secretsPath: "/authentik/minio"
+        secretsPath: "/minio"
         recursive: true
   managedKubeSecretReferences:
-    - secretName: tenant-authentik-minio-users
-      secretNamespace: authentik
+    - secretName: tenant-s3-minio-env-configuration
+      secretNamespace: minio
       secretType: Opaque
       creationPolicy: Owner
       template:
         includeAllSecrets: false
         data:
-          CONSOLE_ACCESS_KEY: "{{ .CONSOLE_ACCESS_KEY.Value }}"
-          CONSOLE_SECRET_KEY: "{{ .CONSOLE_SECRET_KEY.Value }}"
-          CONSOLE_PBKDF_SALT: "{{ .CONSOLE_PBKDF_SALT.Value }}"
-          CONSOLE_PBKDF_PASSPHRASE: "{{ .CONSOLE_PBKDF_PASSPHRASE.Value }}"
+          config.env: |
+            export MINIO_ROOT_USER={{ .MINIO_ROOT_USER.Value }}
+            export MINIO_ROOT_PASSWORD={{ .MINIO_ROOT_PASSWORD.Value }}
