added minio secret

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -17,3 +17,4 @@ resources:
   - manifests/storage/longhorn-storage-class-replicas-1.yaml
   - manifests/storage/longhorn-storage-class-local.yaml
   - manifests/storage/longhorn-volume-snapshot-class.yaml
+  - manifests/secrets/secret-longhorn-minio-secret.yaml
