--- a/apps/tenant-s3/values/prod.yaml
+++ b/apps/tenant-s3/values/prod.yaml
@@ -66,3 +66,4 @@ tenant:
   prometheusOperator: false
   users:
     - name: tenant-s3-minio-admin-console-user-credentials
+    - name: tenant-s3-minio-longhorn-user-credentials
