--- a/apps/longhorn/manifests/secrets/secret-longhorn-minio-secret.yaml
+++ b/apps/longhorn/manifests/secrets/secret-longhorn-minio-secret.yaml
@@ -24,6 +24,6 @@ spec:
       template:
         includeAllSecrets: false
         data:
-          AWS_ACCESS_KEY_ID: "{{ .CONSOLE_ACCESS_KEY.Value }}"
-          AWS_SECRET_ACCESS_KEY: "{{ .CONSOLE_SECRET_KEY.Value }}"
+          AWS_ACCESS_KEY_ID: "{{ .AWS_ACCESS_KEY_ID.Value }}"
+          AWS_SECRET_ACCESS_KEY: "{{ .AWS_SECRET_ACCESS_KEY.Value }}"
           AWS_ENDPOINTS: "https://${ARGOCD_ENV_S3_PROD_API_DOMAIN}"
