--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -18,3 +18,6 @@ resources:
   - manifests/storage/longhorn-storage-class-local.yaml
   - manifests/storage/longhorn-volume-snapshot-class.yaml
   - manifests/secrets/secret-longhorn-minio-secret.yaml
+
+patches:
+  - path: overlays/patch-longhorn-manager-tlsrsakex-env.yaml
