--- a/apps/longhorn/manifests/ingress/ingress.yaml
+++ b/apps/longhorn/manifests/ingress/ingress.yaml
@@ -1,3 +1,10 @@
+apiVersion: traefik.io/v1alpha1
+kind: TLSOption
+metadata:
+  name: no-alpn
+  namespace: longhorn-system
+spec:
+  alpnProtocols: []
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -20,3 +27,5 @@ spec:
           port: 80
   tls:
     secretName: prod-raulstechtips-tls
+    options:
+      name: no-alpn
