--- a/apps/longhorn/manifests/ingress/ingress.yaml
+++ b/apps/longhorn/manifests/ingress/ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: no-alpn
   namespace: longhorn-system
 spec:
-  alpnProtocols: []
+  alpnProtocols:
+    - http/1.1
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
