--- a/apps/tenant-s3/manifests/ingress/prod.yaml
+++ b/apps/tenant-s3/manifests/ingress/prod.yaml
@@ -1,3 +1,11 @@
+apiVersion: traefik.io/v1alpha1
+kind: TLSOption
+metadata:
+  name: no-alpn
+  namespace: longhorn-system
+spec:
+  alpnProtocols:
+    - http/1.1
 ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -28,3 +36,5 @@ spec:
           port: 443
   tls:
     secretName: prod-raulstechtips-tls
+    options:
+      name: no-alpn
