--- a/apps/longhorn/values/prod.yaml
+++ b/apps/longhorn/values/prod.yaml
@@ -1,5 +1,9 @@
 ---
 defaultSettings:
   orphanAutoDeletion: true
+  logLevel: debug
 longhornUI:
   replicas: 1
+longhornManager:
+  log:
+    format: json
