added go debug env to engine manager

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -21,3 +21,4 @@ resources:
 
 patches:
   - path: manifests/overlays/patch-longhorn-manager-tlsrsakex-env.yaml
+  - path: manifests/overlays/patch-longhorn-engine-tlsrsakex-env.yaml
