restarted nodes which fixed backup issue, reverting back patches to test

--- a/apps/longhorn/kustomization.yaml
+++ b/apps/longhorn/kustomization.yaml
@@ -20,5 +20,4 @@ resources:
   - manifests/secrets/secret-longhorn-minio-secret.yaml
 
 patches:
-  - path: manifests/overlays/patch-longhorn-manager-tlsrsakex-env.yaml
-  - path: manifests/overlays/patch-longhorn-engine-tlsrsakex-env.yaml
+  # - path: manifests/overlays/patch-longhorn-manager-tlsrsakex-env.yaml
