--- a/apps/longhorn/values/prod.yaml
+++ b/apps/longhorn/values/prod.yaml
@@ -1,7 +1,7 @@
 ---
 defaultSettings:
   orphanAutoDeletion: true
-  logLevel: debug
+  logLevel: info
 longhornUI:
   replicas: 1
 longhornManager:
