--- a/apps/traefik/values/prod.yaml
+++ b/apps/traefik/values/prod.yaml
@@ -12,6 +12,7 @@ logs:
       general:
         defaultMode: drop
         names:
+          StartUTC: keep
           ClientAddr: keep
           RequestHost: keep
           ServiceName: keep
