14 feature add s3 as longhorn backup target for backups (#15)
* added minio secret

* added new minio user for longhorn

* new users must be added through UI

* updated trafeik logs to debug logs for tls handshake between minio and longhorn

* updated env to match argocd env prefix

* updated longhorn log levels

--- a/apps/longhorn/values/prod.yaml
+++ b/apps/longhorn/values/prod.yaml
@@ -1,5 +1,9 @@
 ---
 defaultSettings:
   orphanAutoDeletion: true
+  logLevel: info
 longhornUI:
   replicas: 1
+longhornManager:
+  log:
+    format: json
