--- a/apps/cnpg-infisical/dev/kustomization.yaml
+++ b/apps/cnpg-infisical/dev/kustomization.yaml
@@ -1,11 +1,10 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: infisical
+namespace: dev
 
 resources:
   - manifests/cluster.yaml
   - manifests/database.yaml
-  - manifests/scheduled-backup.yaml
   - manifests/secrets/secret-cnpg-infisical-admin-credentials.yaml
   - manifests/certificates/tls-certificate-cnpg-infisical.yaml
